tests/ui/pattern/missing-ctor-with-ill-formed-inner-ty-issue-148192.stderr
error[E0277]: the trait bound `(): WhereTrait` is not satisfied
  --> $DIR/missing-ctor-with-ill-formed-inner-ty-issue-148192.rs:16:10
   |
LL |     Map2(<() as WhereTrait>::Type),
   |          ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `WhereTrait` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/missing-ctor-with-ill-formed-inner-ty-issue-148192.rs:1:1
   |
LL | trait WhereTrait {
   | ^^^^^^^^^^^^^^^^

error[E0004]: non-exhaustive patterns: `Enum::Map2(_)` not covered
  --> $DIR/missing-ctor-with-ill-formed-inner-ty-issue-148192.rs:8:11
   |
LL |     match e {
   |           ^ pattern `Enum::Map2(_)` not covered
   |
note: `Enum` defined here
  --> $DIR/missing-ctor-with-ill-formed-inner-ty-issue-148192.rs:14:6
   |
LL | enum Enum {
   |      ^^^^
LL |     Map(()),
LL |     Map2(<() as WhereTrait>::Type),
   |     ---- not covered
   = note: the matched value is of type `Enum`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Enum::Map(_) => (),
LL ~         Enum::Map2(_) => todo!(),
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0004, E0277.
For more information about an error, try `rustc --explain E0004`.
